[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/PoisonSlime.gd" type="Script" id=1]
[ext_resource path="res://assets/oak_woods_v1.0/green slime (4).png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 8.0
height = 0.0

[node name="Slime" type="KinematicBody2D" groups=["Trap"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["Trap"]]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Slime" type="AnimatedSprite" parent="."]
position = Vector2( 1, 5 )
scale = Vector2( 2, 2 )
frames = SubResource( 14 )
animation = "Falling"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 15 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Slime" to="." method="_on_Slime_animation_finished"]
